--- a/chamber/index.html
+++ b/chamber/index.html
@@ -81,10 +81,10 @@
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
       <div class="button-join">
-        <a href="join.html"><button>Join the Chamber</button>
+        <a href="join.html"><span>Join the Chamber</span>
         </a>
       </div>
-      
+
     </div>
     <br>
 
