--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,25 +55,41 @@
       <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
         <div class="numbertext">1 / 4</div>
-        <img src="images/rsz_1rsz_1rsz_4pexels-alisha-lubben-2017747.webp" alt="Banner Hero Santiago Chile">
+        <!-- <img src="images/rsz_1rsz_1rsz_4pexels-alisha-lubben-2017747.webp" alt="Banner Hero Santiago Chile"> -->
+        <picture>
+          <source srcset="images/santiago-400.webp" media="(max-width: 600px)">
+          <img src="images/rsz_1rsz_1rsz_4pexels-alisha-lubben-2017747.webp" alt="Banner Hero Santiago Chile">
+        </picture> 
         <!-- <div class="text">Santiago Chile</div> -->
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">2 / 4</div>
-        <img src="images/banner-home.webp" alt="Banner Home">
+        <!-- <img src="images/banner-home.webp" alt="Banner Home"> -->
+        <picture>
+          <source srcset="images/banner-home-400.webp" media="(max-width: 600px)">
+          <img src="images/banner-home.webp" alt="Banner Home">
+        </picture> 
         <!-- <div class="text">CencoSud</div> -->
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">3 / 4</div>
-        <img src="images/banner-home-licanten2024.webp" alt="Banner Licanten2024">
+        <!-- <img src="images/banner-home-licanten2024.webp" alt="Banner Licanten2024"> -->
+        <picture>
+          <source srcset="images/banner-home-licanten2024-400.webp" media="(max-width: 600px)">
+          <img src="images/banner-home-licanten2024.webp" alt="Banner Licanten2024">
+        </picture> 
         <!-- <div class="text">Asmar</div> -->
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">4 / 4</div>
-        <img src="images/BannerWeb-beneficios2024.webp" alt="Banner Beneficios">
+        <!-- <img src="images/BannerWeb-beneficios2024.webp" alt="Banner Beneficios"> -->
+        <picture>
+          <source srcset="images/BannerWeb-beneficios2024-400.webp" media="(max-width: 600px)">
+          <img src="images/BannerWeb-beneficios2024.webp" alt="Banner Beneficios">
+        </picture> 
         <!-- <div class="text">Banco Ripley</div> -->
       </div>
       <!-- Next and previous buttons -->
