--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,8 +39,8 @@
   </header>
   <main>
     <div id="meetbanner" class="displayed">
-      <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m. </p>
-      <span id="close-banner">❌</span>
+      <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m. <span id="close-banner">❌</span></p>
+      
     </div>
     <!-- <div class="hero">
         <picture>
