--- a/chamber/index.html
+++ b/chamber/index.html
@@ -177,17 +177,10 @@
 
         </div>
       </div>
-      <a href="https://openweathermap.org/">Information provided by OpenWeatherMap.org</a>
+      <a href="https://openweathermap.org/" class="link-weather">Information provided by OpenWeatherMap.org</a>
 
     </section>
 
-
-    <!-- <section class="weather-join-card">
-          <h3>
-            Join Us
-          </h3>
-          <img src="https://placehold.co/300x200/png" alt="Place holder for join us button">
-        </section> -->
   </main>
 
   <footer>
