--- a/chamber/index.html
+++ b/chamber/index.html
@@ -201,6 +201,7 @@
   <script src="../scripts/menu.js"></script>
   <script src="scripts/slides.js"></script>
   <script src="scripts/slider.js"></script>
+  <script src="scripts/spotlight.js"></script>
   <script src="scripts/windchill.js"></script>
   <script src="scripts/weather.js"></script>
   <script src="scripts/banner.js"></script>
