--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,7 +46,7 @@
         </div>
       </div>
 
-      <section id="directory-list" class="grid"></section>
+      <section id="directory-list" class="grid"> <h3>Partner</h3></section>
 
     </main>
 
