--- a/chamber/join.html
+++ b/chamber/join.html
@@ -39,87 +39,88 @@
   </header>
 
   <main class="joinus-body">
+    <h1>Applicant Information</h1>
     <form method="get" action="thankyou.html">
-      <h1>Applicant Information</h1>
+
       <fieldset>
-        <label class="top">First Name* <input type="text" name="fname" required pattern="[A-Za-z]+" id="fname"></label>
-        <label class="top">Last Name* <input type="text" name="lname" required pattern="[A-Za-z]+" id="lname"></label>
+        <label class="top">First Name* <input type="text" name="fname" required pattern="[A-Za-z]+" id="fname"
+            autocomplete="given-name"></label>
+        <label class="top">Last Name* <input type="text" name="lname" required pattern="[A-Za-z]+" id="lname"
+            autocomplete="family-name"></label>
         <label class="top">Business Position Title* <input type="text" name="businesPositionTitle"
-            pattern="^[a-zA-Z\s\-]{7,}$" id="businesPositionTitle" required></label>
-        <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required
-            id="email"></label>
-        <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required id="phone"></label>
-        <label class="top">Business Name* <input type="text" name="businessName" required id="businessName"></label>
+            pattern="^[a-zA-Z\s\-]{7,}$" id="businesPositionTitle" required autocomplete="organization-title"></label>
+        <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required id="email"
+            autocomplete="email"></label>
+        <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required id="phone"
+            autocomplete="tel"></label>
+        <label class="top">Business Name* <input type="text" name="businessName" required id="businessName"
+            autocomplete="organization"></label>
+
+
         <h2>Membership Level</h2>
-        <div id="membershipGrid">
-
-          <label id="npRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="np"> <span> Non Profit
+        <div id="membershipRadio">
+          <label id="npRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="np"> <span class="label-form-text"> Non Profit
               Membership</span></label>
-
-          <div class="memberlevel" id="npBenefits">
-            <h3>Non Profit:</h3>
-            <p>Free option for non profit organizations.</p>
-            <p>Benefits include:</p>
-            <ul>
-              <li>being listed as a non profit.</li>
-          </div>
-          <label id="bronzeRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="bronze"><span>
+          <label id="bronzeRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="bronze"><span class="label-form-text">
               Bronze Membership</span></label>
-
-          <div class="memberlevel" id="bronzeBenefits">
-            <h3>Bronze Level:</h3>
-            <p>A yearly fee of $50.00 </p>
-            <p>Benefits include:</p>
-            <ul>
-              <li>Spotlight placement at least once a month.</li>
-              <li>Access to monthly networking events.</li>
-              <li>Listing in the online member directory.</li>
-            </ul>
-
-          </div>
-
-          <label id="silverRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="silver"><span>
+          <label id="silverRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="silver"><span class="label-form-text">
               Silver Membership</span></label>
-
-          <div class="memberlevel" id="silverBenefits">
-            <h3>Silver Level:</h3>
-            <p>A yearly fee of $80.00 </p>
-            <p>Benefits include:</p>
-            <ul>
-              <li>Spotlight placement at least 3 times a month.</li>
-              <li>Access to monthly networking events and quarterly workshops.</li>
-              <li>Listing in the online member directory with a highlighted profile.</li>
-              <li>One complimentary ticket to the annual Chamber gala.</li>
-            </ul>
-
-          </div>
-
-          <label id="goldRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="gold"> <span> Gold
+          <label id="goldRadio" class="sbs radio"><input type="radio" name="membershipLevel" value="gold"> <span class="label-form-text"> Gold
               Membership</span></label>
-
-          <div class="memberlevel" id="goldBenefits">
-            <h3>Gold Level:</h3>
-            <p>A yearly fee of $150.00 </p>
-            <p>Benefits include:</p>
-            <ul>
-              <li>Spotlight placement at least once a week.</li>
-              <li>Access to all networking events, workshops, and exclusive Gold member events.</li>
-              <li>Premium listing in the online member directory with a highlighted and featured profile.</li>
-              <li>Two complimentary tickets to the annual Chamber gala.</li>
-              <li>Opportunity to host a networking event.</li>
-            </ul>
-
-          </div>
         </div>
+
         <label class="top">Please describe your business<textarea name="businessDescription"
             placeholder="Business Description" id="businessDescription"></textarea></label>
+
         <input type="hidden" id="date" name="date">
-
-
 
       </fieldset>
       <input type="submit" value="Join The Chamber" class="submitBtn">
     </form>
+
+    <div id="memberDescription">
+      <div class="memberlevel" id="npBenefits">
+        <h3>Non Profit:</h3>
+        <p>Free option for non profit organizations.</p>
+        <p>Benefits include:</p>
+        <ul>
+          <li>Company listed as a non profit.</li>
+        </ul>  
+      </div>
+      <div class="memberlevel" id="bronzeBenefits">
+        <h3>Bronze Level:</h3>
+        <p>A yearly fee of $50.00 </p>
+        <p>Benefits include:</p>
+        <ul>
+          <li>Spotlight placement at least once a month.</li>
+          <li>Access to monthly networking events.</li>
+          <li>Listing in the online member directory.</li>
+        </ul>
+      </div>
+      <div class="memberlevel" id="silverBenefits">
+        <h3>Silver Level:</h3>
+        <p>A yearly fee of $80.00 </p>
+        <p>Benefits include:</p>
+        <ul>
+          <li>Spotlight placement at least 3 times a month.</li>
+          <li>Access to monthly networking events and quarterly workshops.</li>
+          <li>Listing in the online member directory with a highlighted profile.</li>
+          <li>One complimentary ticket to the annual Chamber gala.</li>
+        </ul>
+      </div>
+      <div class="memberlevel" id="goldBenefits">
+        <h3>Gold Level:</h3>
+        <p>A yearly fee of $150.00 </p>
+        <p>Benefits include:</p>
+        <ul>
+          <li>Spotlight placement at least once a week.</li>
+          <li>Access to all networking events, workshops, and exclusive Gold member events.</li>
+          <li>Premium listing in the online member directory with a highlighted and featured profile.</li>
+          <li>Two complimentary tickets to the annual Chamber gala.</li>
+          <li>Opportunity to host a networking event.</li>
+        </ul>
+      </div>
+    </div>
   </main>
 
   <footer>
