--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -40,6 +40,7 @@
     <main class="discover-main">
       <h1>Santiago Chamber of Commerce</h1>
       <div class="left-column">
+        <h2>Highlights </h2>
         <section class="history">
           <h3>
             Santiago in the Colonial Period
