--- a/project/index.html
+++ b/project/index.html
@@ -26,7 +26,7 @@
 
 <body>
   <header>
-    <img src="images/rsz_logo.jpg" alt="CCS Logo">
+    <img src="images/logo-50.webp" alt="CCS Logo">
     <button id="menu" aria-label="menu button"></button>
     <!-- Rounded switch -->
     <label class="switch">
