--- a/project/contact.html
+++ b/project/contact.html
@@ -4,26 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="Santiago Chamber of Commerce Join Us">
+  <meta property="og:title" content="Scooter Rental">
   <meta property="og:type" content="website">
   <meta property="og:image"
-    content="https://ernesto-quispe.github.io/wdd230/chamber/images/pexels-alisha-lubben-2017747.jpg">
-  <meta property="og:url" content="https://ernesto-quispe.github.io/wdd230/chamber">
-  <title>Santiago Chamber of Commerce Join Us</title>
+    content="https://ernesto-quispe.github.io/wdd230/project/images/cozumelName.jpg">
+  <meta property="og:url" content="https://ernesto-quispe.github.io/wdd230/project">
+  <title>Scooter Rental</title>
   <meta name="description"
-    content="Ernesto Quispe | WDD 230 - Webfrontend Development | Santiago Chamber of Commerce Join Page.">
+    content="Ernesto Quispe | WDD 230 - Final Proyect | Scooter Rental">
   <meta name="author" content="Ernesto Quispe">
-  <link rel="icon" href="images/ccs.ico">
+  <link rel="icon" href="images/logo.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/medium.css">
   <link rel="stylesheet" href="styles/larger.css">
+  <link rel="preload" href="styles/base.css" as="style">
+  <link rel="preload" href="styles/medium.css" as="style">
+  <link rel="preload" href="styles/larger.css" as="style">
 </head>
 
 <body>
   <header>
-    <img src="images/ccs-image.webp" alt="CCS Logo">
+    <div id="logoDiv">
+    <img src="images/logo-50.webp" alt="Scoots Logo">
+    </div>
     <button id="menu" aria-label="menu button"></button>
     <!-- Rounded switch -->
     <label class="switch">
@@ -31,10 +36,10 @@
       <span class="slider round"></span>
     </label>
     <nav class="navigation">
-      <a href="index.html" class="navLinks active">Home</a>
-      <a href="discover.html" class="navLinks">Discover</a>
-      <a href="directory.html" class="navLinks">Directory</a>
-      <a href="join.html" class="navLinks">Join</a>
+      <a href="index.html" class="navLinks">Home</a>
+      <a href="rentals.html" class="navLinks">Rentals</a>
+      <a href="reservations.html" class="navLinks">Reservations</a>
+      <a href="contact.html" class="navLinks active">Contact</a>
     </nav>
   </header>
 
