--- a/project/index.html
+++ b/project/index.html
@@ -26,7 +26,9 @@
 
 <body>
   <header>
-    <img src="images/logo-50.webp" alt="CCS Logo">
+    <div id="logoDiv">
+    <img src="images/logo-50.webp" alt="Scoots Logo">
+    </div>
     <button id="menu" aria-label="menu button"></button>
     <!-- Rounded switch -->
     <label class="switch">
@@ -42,58 +44,16 @@
   </header>
   <main>
     <div id="meetbanner" class="displayed">
-      <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m. <span id="close-banner">❌</span></p>
+      <p class="currentTemp">Weather Information<span id="close-banner">❌</span></p>
       
     </div>
 
-    <div class="slideshow-container">
+    <div class="hero">
 
-      <!-- Full-width images with number and caption text -->
-      <div class="mySlides fade">
-        <div class="numbertext">1 / 4</div>
-        <!-- <img src="images/rsz_1rsz_1rsz_4pexels-alisha-lubben-2017747.webp" alt="Banner Hero Santiago Chile"> -->
-        <picture>
-          <source srcset="images/santiago-400.webp" media="(max-width: 860px)">
-          <img src="images/cozumel.jpg" alt="Banner Hero Santiago Chile">
-        </picture> 
-        <!-- <div class="text">Santiago Chile</div> -->
-      </div>
-
-      <div class="mySlides fade">
-        <div class="numbertext">2 / 4</div>
-        <!-- <img src="images/banner-home.webp" alt="Banner Home"> -->
-        <picture>
-          <source srcset="images/banner-home-400.webp" media="(max-width: 860px)">
-          <img src="images/banner-home.webp" loading="lazy" alt="Banner Home">
-        </picture> 
-        <!-- <div class="text">CencoSud</div> -->
-      </div>
-
-      <div class="mySlides fade">
-        <div class="numbertext">3 / 4</div>
-        <!-- <img src="images/banner-home-licanten2024.webp" alt="Banner Licanten2024"> -->
-        <picture>
-          <source srcset="images/banner-home-licanten2024-400.webp" media="(max-width: 860px)">
-          <img src="images/banner-home-licanten2024.webp" loading="lazy"  alt="Banner Licanten2024">
-        </picture> 
-        <!-- <div class="text">Asmar</div> -->
-      </div>
-
-      <div class="mySlides fade">
-        <div class="numbertext">4 / 4</div>
-        <!-- <img src="images/BannerWeb-beneficios2024.webp" alt="Banner Beneficios"> -->
-        <picture>
-          <source srcset="images/BannerWeb-beneficios2024-400.webp" media="(max-width: 860px)">
-          <img src="images/BannerWeb-beneficios2024.webp" loading="lazy" alt="Banner Beneficios">
-        </picture> 
-        <!-- <div class="text">Banco Ripley</div> -->
-      </div>
-      <!-- Next and previous buttons -->
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
+      <h1>Discover Scoots, Discover Cozumel</h1>
+      <img id="hero-logo" src="images/logo.webp" alt="Logo">
       <div class="button-join">
-        <a href="join.html"><span>Reservation</span>
+        <a href="join.html"><span>Reserve</span>
         </a>
       </div>
 
@@ -101,57 +61,35 @@
     <br>
 
     <!-- The dots/circles -->
-    <div style="text-align: center">
+    <!-- <div style="text-align: center">
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
       <span class="dot" onclick="currentSlide(3)"></span>
       <span class="dot" onclick="currentSlide(4)"></span>
-    </div>
-    <h1>welcome to rent cozumel</h1>
+    </div> -->
+
     <section class="hero-banner">
-      <h2>WHO WE ARE</h2>
+      <h2>Welcome to Scoots</h2>
       <p>
-        Welcome to the Santiago Metropolitan Chamber of Commerce, where we unite over 2,000 diverse businesses from the
-        vibrant heart of Chile. Established in 1919, our chamber stands as a beacon of support and growth for
-        enterprises large and small. We are dedicated to fostering a thriving economic environment by advocating for the
-        interests of our members and facilitating a dynamic exchange of information and services. Our extensive network,
-        including 30 sister chambers across the nation, empowers us to champion the cause of commerce with a
-        forward-thinking approach and state-of-the-art technology. Join us, and be part of shaping Santiago’s prosperous
-        future.
+        Go on an adventure. Escape the humdrum. Get away from the tourist traps. Rent a vehicle and enjoy the hidden parts of the island!
       </p>
     </section>
 
-    <div class="businesses">
-      <section class="business-card">
-        <a href="https://www.ripley.cl" target="_blank"><img src="images/rsz_rsz_logo_ripley.webp" alt="Ripley Logo"></a>
-        <h3>Ripley</h3>
-        <p>
-          Ripley is a prominent Chilean department store chain that offers a wide range of products, including
-          technology, fashion, and home goods. Founded in 1956, it has expanded its presence to Peru and operates a
-          successful online platform.
-        </p>
-      </section>
-      <section class="business-card">
-        <a href="https://www.falabella.com" target="_blank"><img src="images/rsz_1rsz_falabella_logo_png1.webp" alt="Falabella Logo"></a>
-        <h3>Falabella</h3>
-        <p>
-          Falabella stands as one of Latin America’s largest and most established department stores, with a rich history
-          dating back to 1889. It boasts a vast network of stores across Chile, Peru, and Colombia, and is known for its
-          diverse product offerings and strong brand presence.
-        </p>
-      </section>
-      <section id="cencosud" class="business-card">
-        <a href="https://www.cencosudshoppingcenters.com/" target="_blank"><img src="images/rsz_rsz_2560px-cencosud_logosvg.webp" alt="Cencosud Logo"></a>
-        <h3>Cencosud</h3>
-        <p>
-          Cencosud, now known as Cenco, is a retail powerhouse in Latin America, operating a variety of supermarkets,
-          home improvement stores, and shopping centers. With its roots in Chile, Cencosud has grown to serve several
-          countries, providing customers with quality products and services.
-        </p>
-      </section>
-    </div>
-
-    <section id="weather" class="weather-join-card">
+    <section class="rentals">
+      <h3>Meet Our Best Sellers!</h3>
+<picture>
+  <source srcset="https://placehold.co/500x250" media="(max-width: 860px)">
+  <img src="https://placehold.co/1600x800" loading="lazy" alt="Banner Home">
+</picture> 
+</section>
+    <section class="cozumel">
+      <h3>Discover Our Side of Cozumel</h3>
+      <picture>
+        <source srcset="https://placehold.co/500x250" media="(max-width: 860px)">
+        <img src="https://placehold.co/1600x800" loading="lazy" alt="Banner Home">
+      </picture> 
+    </section>
+    <!-- <section id="weather" class="weather-join-card">
       <h3>Weather for Today</h3>
       <div class="weatherDiv">
         <div id="current">
@@ -175,7 +113,7 @@
       </div>
       <a href="https://openweathermap.org/" class="link-weather">Information provided by OpenWeatherMap.org</a>
 
-    </section>
+    </section> -->
 
   </main>
 
@@ -195,10 +133,10 @@
 
   <script src="../scripts/getdates.js"></script>
   <script src="../scripts/menu.js"></script>
-  <script src="scripts/slides.js"></script>
+  <!-- <script src="scripts/slides.js"></script> -->
   <script src="scripts/slider.js"></script>
-  <script src="scripts/spotlight.js"></script>
-  <script src="scripts/windchill.js"></script>
+  <!-- <script src="scripts/spotlight.js"></script> -->
+  <!-- <script src="scripts/windchill.js"></script> -->
   <script src="scripts/weather.js"></script>
   <script src="scripts/banner.js"></script>
 </body>
