--- a/project/index.html
+++ b/project/index.html
@@ -72,27 +72,27 @@
 
   <!-- Full-width images with number text -->
   <div class="mySlides">
-      <img src="https://placehold.co/1600x800" alt="scooter picture on the beach">
+      <img src="./images/atv3-1024x768.webp" alt="scooter picture on the beach">
       <p class="text-overlay">A perfect get away for one. Great for the streets and beaches of our island!</p>
   </div>
   <div class="mySlides">
-      <img src="https://placehold.co/1600x800" alt="scooter picture on the beach 2">
+      <img src="https://placehold.co/1024x768" alt="scooter picture on the beach 2">
       <p class="text-overlay">Text 2</p>
   </div>
   <div class="mySlides">
-      <img src="https://placehold.co/1600x800" alt="scooter picture on the beach 3">
+      <img src="https://placehold.co/1024x768" alt="scooter picture on the beach 3">
       <p class="text-overlay">Text 3</p>
   </div>
   <div class="mySlides">
-      <img src="https://placehold.co/1600x800" alt="atv picture on the beach">
+      <img src="https://placehold.co/1024x768" alt="atv picture on the beach">
       <p class="text-overlay">Text 4</p>
   </div>
   <div class="mySlides">
-      <img src="https://placehold.co/1600x800" alt="Jeep picture on the beach">
+      <img src="https://placehold.co/1024x768" alt="Jeep picture on the beach">
       <p class="text-overlay">Text 5</p>
   </div>
   <div class="mySlides">
-      <img src="https://placehold.co/1600x800" alt="Jeep picture on the beach 2">
+      <img src="https://placehold.co/1024x768" alt="Jeep picture on the beach 2">
       <p class="text-overlay">Text 6</p>
   </div>
 
@@ -110,22 +110,22 @@
   <div class="row">
     <div class="column">
 
-      <img class="demo cursor" src="https://placehold.co/80x80" style="width:100%" onclick="currentSlide(1)" alt="Scooter Thumbnail">
+      <img class="demo cursor" src="./images/atv3-107x80.webp" style="width:100%" onclick="currentSlide(1)" alt="Scooter Thumbnail">
     </div>
     <div class="column">
-      <img class="demo cursor" src="https://placehold.co/80x80" style="width:100%" onclick="currentSlide(2)" alt="Scooter Thumbnail 2">
+      <img class="demo cursor" src="https://placehold.co/107x80" style="width:100%" onclick="currentSlide(2)" alt="Scooter Thumbnail 2">
     </div>
     <div class="column">
-      <img class="demo cursor" src="https://placehold.co/80x80" style="width:100%" onclick="currentSlide(3)" alt="Scooter Thumbnail 3">
+      <img class="demo cursor" src="https://placehold.co/107x80" style="width:100%" onclick="currentSlide(3)" alt="Scooter Thumbnail 3">
     </div>
     <div class="column">
-      <img class="demo cursor" src="https://placehold.co/80x80" style="width:100%" onclick="currentSlide(4)" alt="Atv Thumbnail">
+      <img class="demo cursor" src="https://placehold.co/107x80" style="width:100%" onclick="currentSlide(4)" alt="Atv Thumbnail">
     </div>
     <div class="column">
-      <img class="demo cursor" src="https://placehold.co/80x80" style="width:100%" onclick="currentSlide(5)" alt="Jeep Thumbnail1">
+      <img class="demo cursor" src="https://placehold.co/107x80" style="width:100%" onclick="currentSlide(5)" alt="Jeep Thumbnail1">
     </div>
     <div class="column">
-      <img class="demo cursor" src="https://placehold.co/80x80" style="width:100%" onclick="currentSlide(6)" alt="Jeep Thumbnail2">
+      <img class="demo cursor" src="https://placehold.co/107x80" style="width:100%" onclick="currentSlide(6)" alt="Jeep Thumbnail2">
     </div>
     
   </div>
